--- a/src/app/views/instructors/index.njk
+++ b/src/app/views/instructors/index.njk
@@ -36,5 +36,11 @@
         {% endfor %}
       </tbody>
     </table>
+
+    <div class="pagination"
+    data-page={{pagination.page}}
+    data-total={{pagination.total}}
+    data-filter={{filter}}
+    ></div>
   </div>
 {% endblock content %}
